Make sure brunch nav shows up on mobile

--- a/style.css
+++ b/style.css
@@ -188,6 +188,7 @@ a:hover.nav-item {
 
   .nav-item {
     font-weight: 700;
+    width: 22%;
   }
 
   .wedding-details {
